[project]
name = "repl-nix-pokerprofitbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mss>=9.0.2",
    "numpy>=2.1.2",
    "openai>=1.53.0",
    "opencv-python-headless",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.39.0",
    "tesserocr>=2.7.1",
]
